# appitivityv1

./: .env.local.backup  .env.local.backup2  .eslintrc.json  .gitignore  CHANGELOG.md  DEPLOYMENT_DOCUMENTATION.md  MCP_INSTALLATION_GUIDE.md  README.md  STAGEHAND_INSTALLATION_COMPLETE.md  STAGEHAND_MCP_SETUP.md  STAGEHAND_TROUBLESHOOTING.md  add_mcp_tools.sh  apptivity_knowledge_graph.json  automated-cleanup.js  claude_desktop_config.json  clear-timeline-cache.html  commit-and-push.sh  commit-organization.sh  composio-mcp-fixed.py  composio-mcp-simple.py  connect_bookhubdata.py  cursor-mcp-config.json  cursor-mcp-setup.sh  dev-server-profile-report.json  env-template-ready.txt  eslint.config.mjs  final-cursor-mcp-config.json  gordon-mcp.yml  install_cursor_github_app.sh  manual-migration.sql  mcp-env-template.txt  netlify.toml  next.config.js  nocodebackend-mcp-server.py  nocodebackend-mcp-wrapper.js  nocodebackend_mcp_final.py  package-lock.json  package.json  playwright.config.ts  project.code-workspace  (+16 more)
.cursor/: environment.json  mcp.json
.netlify/: netlify.toml  state.json
.next/: app-build-manifest.json  react-loadable-manifest.json  trace
.storybook/: preview.ts
build-scripts/: stagewise-mock-server.js
config/: cursor-mcp-complete-config.json  package-lock.json
configuration/: .cursorrules  .env.local.backup4  .firebaserc  cursor-mcp-config.json  netlify.toml  package-lock.json  restored-mcp-config.json  sentry.edge.config.ts
misc/nocodebackend_mcp_package/: pyproject.toml
misc/nocodebackend_mcp_package/nocodebackend_mcp/: server.py
(+750 files in other folders)
