[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nocodebackend-mcp"
version = "1.0.0"
description = "NoCodeBackend MCP Server"
dependencies = [
    "mcp",
    "httpx"
]

[project.scripts]
nocodebackend-mcp = "nocodebackend_mcp.server:main" 